fix: update color contrast and meta tags for accessibility

--- a/qr-code/index.css
+++ b/qr-code/index.css
@@ -7,19 +7,24 @@
 body {
   font-family: 'Outfit', sans-serif;
   font-weight: 400;
-  background-color: hsl(212, 45%, 89%);
+  background-color: 	#d6e2f0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 2rem;
+  min-height: 85vh;
+}
+
+header h1 {
+  text-decoration: dashed;
 }
 
 .container {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #fff;
   border-radius: 1rem;
   padding: 1rem;
-  margin: 2rem auto;
+  margin: 1rem auto;
   max-width: 300px;
 }
 
@@ -42,13 +47,7 @@ p.main-text {
 }
 
 p.secondary-text {
-  color: hsl(220, 15%, 55%);
+  color: 	#51596C;
   margin-top: 1rem;
   font-size: 15px;
 }
-
-/* @media (min-width: 376px) {
-  .content {
-    padding: 1rem;
-  }
-} */
